# pong-game

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pong.sln  vcpkg.json
pong/: Ball.cpp  GameObject.h  Paddle.h  TextureSkin.h  pong.cpp  pong.rc  pong.sln  pong.vcxproj  pong.vcxproj.filters  resource.h
pong/Objects/: Ball.cpp  Ball.h  GameField.cpp  GameField.h  GameObject.h  Paddle.cpp  Paddle.h
pong/assets/audio/: goal_ogg.h  hit_ogg.h  lose_ogg.h  mainTheme_ogg.h  missedGoal_ogg.h  win_ogg.h
pong/assets/fonts/: Roboto-Black_ttf.h
pong/assets/images/: BlueEye_png.h  CrackedEye_png.h  CyclopeEye_png.h  DonutEye_png.h  Watermelon_png.h
pong/audio/: AudioManager.cpp  AudioManager.h
pong/common/: GoalObserver.h  Utils.h
pong/common/Game/: Game.cpp  Game.h
pong/texturing/: BallSkin.h  SkinFactory.cpp  SkinFactory.h  TextureSkin.cpp  TextureSkin.h
pong/ui/: SkinsMenu.cpp  SkinsMenu.h  TextPanel.h  scorePanel.cpp  scorePanel.h
